--- a/requirements.txt
+++ b/requirements.txt
@@ -10,3 +10,4 @@ roma
 ipdb
 pytorch-metric-learning                         # For one-shot action recognition
 smplx[all]                                      # For mesh recovery
+tabulate
