--- a/configs/action/MB_ft_NTU60_xsub.yaml
+++ b/configs/action/MB_ft_NTU60_xsub.yaml
@@ -11,7 +11,7 @@ weight_decay: 0.01
 lr_decay: 0.99
 
 # Model
-model_version: class
+model_version: embed
 maxlen: 243
 dim_feat: 512
 mlp_ratio: 2
@@ -20,7 +20,7 @@ dim_rep: 512
 num_heads: 8
 att_fuse: True
 num_joints: 17
-hidden_dim: 2048
+hidden_dim: 1024
 dropout_ratio: 0.5
 
 # Data
